# cs2-external-view

./: .editorconfig  .gitignore  .gitmodules  README.md
.github/workflows/: build.yml
addons/counterstrikesharp/plugins/ExternalView/lang/: en.json  ja.json
addons/externalviewhelper/gamedata/: externalviewhelper.games.txt
addons/metamod/: externalviewhelper.vdf
cpp/: CMakePresets.json  vcpkg.json
cpp-extv/: CMakeLists.txt  CMakePresets.json  vcpkg.json
cpp-extv/cmake/: CMakeLists.txt
cpp-extv/cmake/cs2fixes/: CMakeLists.txt
cpp-extv/cmake/hl2sdk/: CMakeLists.txt
cpp-extv/cmake/metamod/: CMakeLists.txt
cpp-extv/cmake/protobuf/: CMakeLists.txt
cs-extv/: ExternalView.sln
cs-extv/ExternalView/: ExternalView.csproj  ExternalViewPlugin.cs
cs-extv/ExternalView.Tests/: ExternalView.Tests.csproj
cs-extv/ExternalView.Tests/Core/Cameras/: WatchCameraTests.cs
cs-extv/ExternalView.Tests/Core/Fakes/: FakeCameraContext.cs  FakeExternalViewConVars.cs  FakeExternalViewCsApi.cs  FakeExternalViewCsEntity.cs  FakeExternalViewCsPlayer.cs  FakeExternalViewCsWeapon.cs
cs-extv/ExternalView.Tests/Core/Fixtures/: ExternalViewFixture.cs
cs-extv/ExternalView.Tests/Core/Utils/: ButtonStateTests.cs
cs-extv/ExternalView/Core/: AttackAndUsePositionFixer.cs  ExternalView.cs  ExternalViewSystem.cs
cs-extv/ExternalView/Core/API/: IExternalViewConVars.cs
cs-extv/ExternalView/Core/CSSharp/: ExternalViewCsApi.cs  ExternalViewCsEntity.cs  ExternalViewCsPlayer.cs
cs-extv/ExternalView/Core/Cameras/: BaseChaseCamera.cs  BaseFlyCamera.cs  ModelViewCamera.cs  WatchCamera.cs
cs-extv/ExternalView/Core/Player/: ExternalViewPlayer.cs
cs-extv/ExternalView/Core/Player/Components/: ViewEntityHandlerComponent.cs
cs-extv/ExternalView/Core/Utils/: MathUtils.cs
